# go2_driver

./: .gitignore  README.md
go2_base/: CMakeLists.txt  package.xml
go2_base/config/: go2_driver_params.yaml
go2_base/go2_base/: __init__.py  go2_driver_node.py
go2_base/launch/: go2_bringup.launch.py
go2_base/scripts/: restamp_pointcloud2.py  set_unitree_static_ip.sh
go2_base/src/: go2_cmd_vel_bridge.cpp  go2_state_bridge.cpp
go2_description/: CMakeLists.txt  README.md  package.xml
go2_description/launch/: check_joint.rviz  go2_description.launch.py
go2_description/rviz/: go2.rviz
go2_description/urdf/: go2_description.urdf
go2_description/xacro/: robot.xacro
go2_interface/: CMakeLists.txt  package.xml
go2_interface/msg/: Go2BatteryState.msg  SportCmd.msg
