<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_base</name>
  <version>0.1.0</version>
  <description>
    ROS2 driver node for Unitree GO2 quadruped robot.
    Bridges unitree_sdk2_python DDS channels to standard ROS2 topics,
    and converts ROS2 commands back to Unitree SDK API calls.
  </description>
  <maintainer email="todo@example.com">go2_driver</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 message dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <!-- unitree custom messages (from cyclonedds_ws) -->
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>

  <!-- Custom GO2 interface -->
  <depend>go2_interface</depend>

  <!-- Launch dependencies -->
  <exec_depend>go2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
