<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_base</name>
  <version>0.1.0</version>
  <description>
    ROS 2 base integration package for Unitree GO2 using Unitree ROS 2 topics
    and sport API requests.
  </description>
  <maintainer email="todo@example.com">go2_driver</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>go2_interface</depend>

  <exec_depend>go2_description</exec_depend>
  <exec_depend>hesai_lidar</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
